# logicsim

./: CMakeLists.txt
include/: gate.hpp  node.hpp  scheduler.hpp
src/: gate.cpp  main.cpp  node.cpp  scheduler.cpp
test/: CMakeLists.txt  tests.cpp
